	(needed by preferences_need_color_opts, else pixbuf gets created
	twice).

	* background-properties-capplet.c (real_realize_cb): Set
	color frame sensitivity based on preferences_need_color_opts.
	(property_change_cb): Ditto.
	(setup_dialog): Add peditor/guard for wallpaper_enabled. Also,
	set glade object data on the preferences structure as well.
	
2001-08-28  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c (get_legacy_settings): Retrieve
	the correct value for wallpaper_types

	* applier.c (output_compat_prefs): Output the correct value for
	wallpaperAlign

	* preferences.c (preferences_load_from_bonobo_pbag): Don't adjust
	the opacity if the opacity setting is invalid
	(preferences_load_from_bonobo_db): Ditto

2001-08-27  Bradford Hovinen  <hovinen@ximian.com>

	* background-properties-capplet.c (setup_dialog): Initialize/free
	the CORBA environment structure
	(real_realize_cb): Put into an idle handler, called by
	realize_2_cb, the new timeout handler

	* preferences.c (preferences_load_from_bonobo_pbag): 
	(preferences_load_from_bonobo_db): Extract from preferences_new_*

	* background-properties-capplet.c (property_change_cb):
	(realize_cb): Accept prefs structure in lieu of
	Bonobo_PropertyBag; don't reload the preferences structure from
	the property bag
	(property_change_cb): Call preferences_apply_event to modify the
	preferences structure appropriately
	(property_change_cb):
	(realize_cb): If the preferences structure is marked destroyed,
	just return
	(setup_dialog): Create a preferences structure from the property
	bag given and use that as the extra data passed to callbacks
	(realize_cb): Put into an idle handler real_realize_cb

	* preferences.c (preferences_apply_event): Implement

	* applier.c (output_compat_prefs): Make prefs const

	* applier.[ch]: Have applier_apply_prefs take a const Preferences
	structure

	* preferences.[ch]: Make preferences_clone take a const
	Preferences structure
