@@ -20,6 +20,11 @@
 	(setup_dialog): Add peditor/guard for wallpaper_enabled. Also,
 	set glade object data on the preferences structure as well.
 	
+2001-09-03  Bradford Hovinen  <hovinen@ximian.com>
+
+	* background-properties-capplet.c (setup_dialog): Apply
+	preferences now if the preview widget is already realized
+
 2001-08-28  Bradford Hovinen  <hovinen@ximian.com>
 
 	* background-properties-capplet.c (get_legacy_settings): Retrieve
